apps/downloads/jellyseerr/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyseerr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: 7878
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: 8989
          protocol: TCP
    - to:
        - namespaceSelector:
            matchNames:
              - media
          podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
      ports:
        - port: 5055
          protocol: TCP
